@startuml
Title Domænemodel

hide circle
hide methods

class Sælger {
    medarbejder nummer
    navn
    kodeord
}

class Carport {
    type
    længde
    bredde
    shed?
}

class Skur {
    længde
    bredde
}

class Kunde {
    navn
    address
    post nummer
    by
    tlf nummer
    email
}

class Bestilling {
    ordrenumer
    tidspunkt
    status
    tilbud?
    længde
    bredde
}

class Stykliste {
    materiale varenummer
    materiale navn
    materiale antal
}

class Materiale {
    varenummer
    navn
    styk/meter pris
}

Bestilling "1" -- "1" Carport
Carport "1" -- "1" Skur
Bestilling "*" -- "1" Kunde
Carport "*" -- "1" Stykliste
Stykliste "1" -- "*" Materiale
Sælger "1" -- "*" Bestilling





@enduml